--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@capacitor/android": "^5.7.0",
         "@capacitor/cli": "^5.7.0",
         "@capacitor/core": "^5.7.0",
+        "axios": "^1.6.7",
         "chart.js": "3.3.2",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
