--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
     "name": "sakai-vue",
     "version": "3.9.0",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "vite --host",
+        "build": "vite build && npx cap sync",
         "preview": "vite preview",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
         "@capacitor/android": "^5.7.0",
+        "@capacitor/camera": "^5.0.9",
         "@capacitor/cli": "^5.7.0",
         "@capacitor/core": "^5.7.0",
+        "@ionic/pwa-elements": "^3.2.2",
         "axios": "^1.6.7",
         "chart.js": "3.3.2",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.39.0",
         "vue": "^3.2.41",
+        "vue-qrcode-reader": "^5.5.3",
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
