--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@ionic/pwa-elements": "^3.2.2",
         "axios": "^1.6.7",
         "chart.js": "3.3.2",
+        "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.39.0",
