--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
         "@ionic/pwa-elements": "^3.2.2",
         "axios": "^1.6.7",
         "chart.js": "3.3.2",
+        "leaflet": "^1.9.4",
+        "leaflet-routing-machine": "^3.2.12",
         "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
