--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.6.7",
         "chart.js": "3.3.2",
         "leaflet": "^1.9.4",
+        "leaflet-polylinedecorator": "^1.6.0",
         "leaflet-routing-machine": "^3.2.12",
         "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
