--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,13 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-form-data": "^2.0.23",
+    "firebase-admin": "^12.0.0",
     "luxon": "^3.4.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
-    "uuid": "^9.0.1",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
